add  background-image

--- a/index.css
+++ b/index.css
@@ -3,5 +3,5 @@ img{
 }
 
 body{
- background-image:url()
+ background-image:url(http://www.divinemax.com/wp-content/uploads/2018/09/cb-background-10.jpeg);
 }
