add project name

--- a/index.css
+++ b/index.css
@@ -3,5 +3,7 @@ img{
 }
 
 body{
- background-image:url(http://www.divinemax.com/wp-content/uploads/2018/09/cb-background-10.jpeg);
+ background-image:URL(https://www.pexels.com/photo/close-up-of-wooden-plank-326311/);
+ border:black;
+ background-color:black;
 }
